# stonks

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Justfile  Makefile  docker-compose.dev.yml  docker-compose.yaml
.claude/: settings.json
.claude/skills/create-migration/: SKILL.md
.claude/skills/fullstack-change/: SKILL.md
.claude/skills/worktree/: SKILL.md
.github/workflows/: deploy.yml
backend/: Dockerfile  alembic.ini  docker-compose-development.yaml  docker-compose.override.prod.yml  docker-compose.yaml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260317_initial.py
backend/app/: app.py  config.py  factory.py  utils.py
backend/app/base/: mixins.py  models.py
backend/app/company/: models.py  queries.py  routes.py  schemas.py  tasks.py
backend/app/data/: company.py  new_schema.py  schema.py  validator.py
backend/app/queue/: config.py  enums.py  registry.py  transactions.py  types.py
backend/app/utils/: db.py
backend/migrations/versions/: 2025-08-10_initial_06057295e4ee.py  2025-08-10_scheduler_12e0994850cc.py  2025-08-11_add_crontasks_table_a79c4cec2442.py
backend/observability_stack/: docker-compose.yml
backend/observability_stack/loki/: loki-config.yml
backend/observability_stack/prometheus/: prometheus.yml
backend/scripts/: migrate.py  start-worker.sh  start.sh
frontend/: eslint.config.js  eslint.config.mjs  index.html  orval.config.ts  package-lock.json  package.json  postcss.config.mjs  tsconfig.json  vite.config.ts
frontend/src/: router.tsx
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/company/: page.tsx
frontend/src/app/company/[ticker]/: loading.tsx  page.tsx
frontend/src/components/: company-client-page.tsx  company-detail.tsx  company-search-page.tsx  company-table.tsx  sidebar.tsx  theme-provider.tsx
frontend/src/lib/: api-client-instance.ts  api-client.ts  hooks.ts  tanstack-query-provider.tsx  use-debounce.ts  utils.ts
frontend/src/openapi/: custom-instance.ts  litestarAPI.schemas.ts
frontend/src/openapi/company/: company.ts
frontend/src/openapi/queries/: common.ts  ensureQueryData.ts  prefetch.ts  queries.ts  suspense.ts
frontend/src/openapi/requests/: schemas.gen.ts  services.gen.ts  types.gen.ts
frontend/src/openapi/requests/core/: OpenAPI.ts
scripts/: deploy.sh  deploy_webhook_listener.py  dev.sh  setup_webhook_service.sh  worktree-setup.sh  worktree-teardown.sh
