[project]
name = "Stonks"
version = "0.1.0"
description = "Minimal Litestar backend using uv"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
  "litestar[standard]",
  "litestar[sqlalchemy]",
  "litestar[opentelemetry]",
  "taskiq-litestar",
  "taskiq-pg",
  "msgspec",
  "psycopg2-binary>=2.9.10",
  "asyncpg>=0.30.0",
  "prometheus_client",
]
